--- a/SNMPArpScanner/packages.config
+++ b/SNMPArpScanner/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.0.275-beta" targetFramework="net452" />
+  <package id="Lextm.SharpSnmpLib" version="8.5.0.0" targetFramework="net452" />
   <package id="SnmpSharpNet" version="0.9.4" targetFramework="net452" />
 </packages>
